c/src/test/resources/c/nec_inline_bnc/invalid/ex10-3.ctrl
<controlFile>
  <sourceFile name="../ex10.c" id="1" />
  <run>
    <startPosition fileId="1" line="16" />
    <wayPoint fileId="1" line="23">
      <function funcName="f1" >
        <wayPoint fileId="1" line="39" >
          <loop iterTimes="3" />
        </wayPoint>
      </function>
    </wayPoint>
    <endPosition fileId="1" line="24" />
  </run>
</controlFile>